--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   provider: ^6.1.2
+  google_sign_in: ^6.3.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
