--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.1.2
   google_sign_in: ^6.3.0
   shared_preferences: ^2.5.2
+  cloud_firestore: ^5.6.5
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
