--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.5.2
   cloud_firestore: ^5.6.5
   encrypt: ^5.0.3
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
