--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^5.6.5
   encrypt: ^5.0.3
   dropdown_button2: ^2.3.9
+  firebase_storage: ^12.4.4
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
