--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_storage: ^12.4.4
   image_picker: ^1.1.2
   intl: ^0.20.2
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
